--- a/src/main/resources/org/example/userdaogui/users-listview.fxml
+++ b/src/main/resources/org/example/userdaogui/users-listview.fxml
@@ -25,17 +25,17 @@
     </padding>
 
     <Label fx:id="titleText" text="Users" textFill="BLUE">
-        <font><Font size="18.0" /></font>
+        <font><Font size="24.0" /></font>
     </Label>
 
-    <TextField fx:id="nameTextField" text="Enter a name" />
 
-    <Button id="showFriendsButton" fx:id="showFriendsButton" onAction="#onShowAllUsersButtonClick" text="Show All Users" />
+    <Button id="showUsersButton" fx:id="showUsersButton"
+            onAction="#onShowAllUsersButtonClick" text="Get All Users" />
 
     <VBox prefHeight="200.0" prefWidth="100.0">
         <children>
 
-            <ListView id="listView" fx:id="listView" minHeight="-Infinity" prefHeight="200.0" prefWidth="250.0">
+            <ListView id="listView" fx:id="listViewOfUsers" minHeight="-Infinity" prefHeight="200.0" prefWidth="250.0">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
