--- a/src/main/resources/org/example/userdaogui/users-listview.fxml
+++ b/src/main/resources/org/example/userdaogui/users-listview.fxml
@@ -4,7 +4,7 @@
     This FXML file declares the UI Controls that make up    >>>Feb 2025<<<
     the User Interface (UI). Each GUI screen is a hierarchy of UI
     containers and controls called Nodes in JavaFX.
-    This file is read by JavaFX and turned into objects which are
+    This file is read by JavaFX and turned into java objects which are
     accessible in the associated controller.
     Use the [Scene Builder] tab at the bottom to switch to the
     screen builder tool.
@@ -15,38 +15,44 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="611.0" prefWidth="431.0" spacing="20.0"
+<VBox alignment="CENTER"
+      prefHeight="611.0"
+      prefWidth="431.0"
+      spacing="20.0"
       xmlns="http://javafx.com/javafx/17.0.12"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.userdaogui.ShowAllUsersController">
+      fx:controller="org.example.userdaogui.UsersController">
 
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="titleText" text="Users" textFill="BLUE">
-        <font><Font size="24.0" /></font>
+        <font>
+            <Font size="24.0"/>
+        </font>
     </Label>
 
-
-    <Button id="showUsersButton" fx:id="showUsersButton"
-            onAction="#onShowAllUsersButtonClick" text="Get All Users" />
+    <Button id="showUsersButton"
+            fx:id="showUsersButton"
+            onAction="#onShowAllUsersButtonClick"
+            text="Get All Users"/>
 
     <VBox prefHeight="200.0" prefWidth="100.0">
-        <children>
-
-            <ListView id="listView" fx:id="listViewOfUsers" minHeight="-Infinity" prefHeight="200.0" prefWidth="250.0">
-                <padding>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                </padding>
-            </ListView>
-
-        </children>
+        <ListView id="listView"
+                  fx:id="listViewOfUsers"
+                  minHeight="-Infinity"
+                  prefHeight="200.0"
+                  prefWidth="250.0">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+        </ListView>
     </VBox>
 
-    <Button fx:id="clearAllButton" onAction="#onClearAllButtonClick" text="Clear All" />
+    <Button fx:id="clearAllButton" onAction="#onClearListButtonClick" text="Clear the list"/>
 
-    <Label prefHeight="18.0" prefWidth="379.0" text="Messages:" />
-    <Label fx:id="messageLabel" prefHeight="18.0" prefWidth="378.0" text="Event messages display here..." />
+    <Label prefHeight="18.0" prefWidth="379.0" text="Messages:"/>
+    <Label fx:id="messageLabel" prefHeight="18.0" prefWidth="378.0" text="Event messages display here..."/>
 
 </VBox>
